# gitcommit

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.dev.md  README.md  gitcommit  pyproject.toml  setup.py
docs/: dev_distribution_legacy.md
gitcommit/: __main__.py  ansi.py  completers.py  gitcommit.py  style.py  updater.py  utils.py  validators.py
