[tool.poetry]
name = "conventional-commit"
version = "0.3.0"
description = "a tool for writing conventional commits, conveniently"
authors = ["nebbles"]
readme = "README.md"
homepage = "https://github.com/nebbles/gitcommit"
classifiers=[  # https://pypi.org/classifiers/
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
packages = [
    { include = "gitcommit" },
]

[tool.poetry.scripts]
gitcommit = 'gitcommit.gitcommit:main'

[tool.poetry.dependencies]
python = "^3.6"
prompt_toolkit = "^3.0"
requests = "^2.22"
pyperclip = "^1.7"
packaging = "^19.2"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
